FLIP-104 [design] 공통 컴포넌트 추가 및 디자인 시스템 수정 - 디자인 시스템 수정 -- (수정) localRadius -> localShape -- (추가) localTransition - 공통 컴포넌트 추가 -- (추가) FlipButtons -- (추가) FlipChips -- (추가) FlipTextField -- (추가) FlipModals

--- a/gradle.properties
+++ b/gradle.properties
@@ -28,3 +28,6 @@ org.gradle.parallel=true
 org.gradle.unsafe.configuration-cache=true
 
 android.defaults.buildfeatures.buildconfig=true
+
+# Room
+kotlin.native.disableCompilerDaemon = true
