--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -31,6 +31,11 @@ moshi = "1.12.0"
 okhttp = "5.0.0-alpha.2"
 androidxDataStore = "1.0.0"
 coil-compose = "2.6.0"
+googleId = "1.1.0"
+googleGms = "4.4.1"
+credentials = "1.2.2"
+firebaseBom = "33.0.0"
+kakaoSdk = "2.19.0"
 
 [libraries]
 # add
@@ -81,12 +86,26 @@ retrofit-mock = { module = "com.squareup.retrofit2:retrofit-mock", version.ref =
 retrofit-converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 retrofit-converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "retrofit" }
 moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshi" }
+#androidx-dataStore-core = { group = "androidx.datastore", name = "datastore", version.ref = "androidxDataStore" }
 androidx-dataStore-preference = { module = "androidx.datastore:datastore-preferences", version.ref = "androidxDataStore" }
 okhttp-mockWebServer = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okhttpMock" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil-compose" }
-#androidx-dataStore-core = { group = "androidx.datastore", name = "datastore", version.ref = "androidxDataStore" }
+# Credentials(Login) & Firebase
+androidx-credentials = { module = "androidx.credentials:credentials", version.ref = "credentials" }
+androidx-credentials-play-services-auth = { module = "androidx.credentials:credentials-play-services-auth", version.ref = "credentials" }
+googleid = { module = "com.google.android.libraries.identity.googleid:googleid", version.ref = "googleId" }
+firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx" }
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+# Kakao SDK
+kakao-sdk-v2-all = { module = "com.kakao.sdk:v2-all", version.ref = "kakaoSdk" }
+kakao-sdk-v2-user = { module = "com.kakao.sdk:v2-user", version.ref = "kakaoSdk" }
+kakao-sdk-v2-talk = { module = "com.kakao.sdk:v2-talk", version.ref = "kakaoSdk" }
+kakao-sdk-v2-share = { module = "com.kakao.sdk:v2-share", version.ref = "kakaoSdk" }
+kakao-sdk-v2-friend = { module = "com.kakao.sdk:v2-friend", version.ref = "kakaoSdk" }
+kakao-sdk-v2-navi = { module = "com.kakao.sdk:v2-navi", version.ref = "kakaoSdk" }
+kakao-sdk-v2-cert = { module = "com.kakao.sdk:v2-cert", version.ref = "kakaoSdk" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
@@ -98,6 +117,7 @@ kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 #kotlin-gradle-plugin = {module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin"}
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp"}
+gms-google-services = { id = "com.google.gms.google-services", version.ref = "googleGms" }
 
 [bundles]
 
