--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ androidxTestRunner = "1.5.2"
 androidXArchCoreTest = "2.2.0"
 coroutines = "1.8.0"
 hilt = "2.50"
+hiltJavax = "1"
 junit = "4.13.2"
 mockito = "4.8.0"
 robolectric = "4.10.3"
@@ -65,6 +66,7 @@ androidx-arch-core-testing = { module = "androidx.arch.core:core-testing", versi
 androidx-test-core  = { module = "androidx.test:core", version.ref = "androidxTestCore" }
 androidx-test-ext-junit = { module = "androidx.test.ext:junit", version.ref = "androidxTestExt" }
 androidx-test-runner = { module = "androidx.test:runner", version.ref = "androidxTestRunner" }
+dagger-hilt-javax = { module = "javax.inject:javax.inject", version.ref="hiltJavax"}
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
 hilt-android-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
