FLIP-158 [feat] 플립(Post)작성 화면 구현 1차 --(수정) AddPost 기능 관련 API, DataSource, Repository 수정 --(추가) AddFlipScreen (기능들 포함) --(추가) BackgroundColorType(플립 배경 컬러 타입) --(수정) WindowInset 수정했으나 재수정 필요 --(추가) FlipGradient --(수정) AddFlipUiEvent 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/title_activity_main"
-            android:theme="@style/Theme.Flip" />
+            android:theme="@style/Theme.Flip"
+            android:windowSoftInputMode="adjustResize"/>
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
