FLIP-136 [refactor] HomeScreen 리팩토링 & PullToRefresh 작업 중
1. 필터링 된 나의 관심 카테고리 가져오는 UseCase 추가(GetFilteredMyCategoriesUseCase)
2. fixedCategories, Domain 레이어에 포함되게 수정
3. HomeScreen에서 읽는 fixedCategories 개수는 Domain 레이어에서 직접 읽지 않고 CategoriesResources.kt 에서 읽어야 한다.
4. GetMyCategoriesUseCase(), suspend 키워드 제거
5. HomeViewModel 나의 관심 카테고리는 'stateIn' 사용 해서 StateFlow 로 변환
6. PullRefresh 기능 추가 (미완성)

ISSUE: HomeScreen 버벅임 발생

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -53,6 +53,7 @@ androidx-compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graph
 androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4"}
 androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest"}
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling"}
+androidx-compose-ui-util = { group = "androidx.compose.ui", name = "ui-util"}
 androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview"}
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidxCore" }
 androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "androidxCoreSplashscreen" }
